--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,8 @@
 [metadata]
 name = smp
-version = 0.0.7
-description = A simple CLI to quickly and cleanly perform the daily routine of starting projects
+version = 1.0.2
+summary = A simple CLI to quickly and cleanly perform the daily routine of starting projects
+long_description = Start My Project is a simple CLI that allows its users to quickly start projects via the smp CLI. A single function call can begin all processes and development tools needed to start working on a project. This includes starting up an IDE, a command prompt at the projects path, run scripts, open websites, open a file explorer at the projects path, and much more. Start My Project is in a very early stage, but its basic functionality will simplify every developers life.
 author = Jacob Kelly Miller (jacobmiller22)
 author_email = jacobmillerdev@gmail.com
 maintainer = Jacob Kelly Miller (jacobmiller22)
