Fixed bug where projects file would not be created if it did not exist. Added verbose flag to project start

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = smp
-version = 1.0.2
+name = Start-My-Project
+version = 1.0.3
 summary = A simple CLI to quickly and cleanly perform the daily routine of starting projects
 long_description = Start My Project is a simple CLI that allows its users to quickly start projects via the smp CLI. A single function call can begin all processes and development tools needed to start working on a project. This includes starting up an IDE, a command prompt at the projects path, run scripts, open websites, open a file explorer at the projects path, and much more. Start My Project is in a very early stage, but its basic functionality will simplify every developers life.
 author = Jacob Kelly Miller (jacobmiller22)
