switched to lmp. Few tests implemented. increased modularity

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
-name = Start-My-Project
-version = 1.0.3
+name = lmp
+version = 0.1.1
 summary = A simple CLI to quickly and cleanly perform the daily routine of starting projects
-long_description = Start My Project is a simple CLI that allows its users to quickly start projects via the smp CLI. A single function call can begin all processes and development tools needed to start working on a project. This includes starting up an IDE, a command prompt at the projects path, run scripts, open websites, open a file explorer at the projects path, and much more. Start My Project is in a very early stage, but its basic functionality will simplify every developers life.
+long_description = Launch My Project is a simple CLI that allows its users to quickly start projects via the smp CLI. A single function call can begin all processes and development tools needed to start working on a project. This includes starting up an IDE, a command prompt at the projects path, run scripts, open websites, open a file explorer at the projects path, and much more. Start My Project is in a very early stage, but its basic functionality will simplify every developers life.
 author = Jacob Kelly Miller (jacobmiller22)
 author_email = jacobmillerdev@gmail.com
 maintainer = Jacob Kelly Miller (jacobmiller22)
@@ -19,13 +19,15 @@ package_dir=
 packages = find:
 scripts =
     src/driver.py
-    src/smp.py
+    src/lmp.py
     src/projects.json
+    src/projects.py
+    src/utils.py
 
 [options.packages.find] #optional
 where = src
 
 [options.entry_points]
 console_scripts =
-    smp = smp:smp
+    lmp = lmp:lmp
 
