--- a/src/projects.json
+++ b/src/projects.json
@@ -1,25 +1,5 @@
 [
   {
-    "title": "PortalApp",
-    "summary": "TBD",
-    "os": {
-      "windows": {
-        "path": "C:\\Users\\jacob\\Documents\\Projects\\PortalApp",
-        "editor-cmd": "code",
-        "scripts": { "cmds": ["npm run dev"], "bash-scripts": [] }
-      },
-      "macOS": {
-        "path": "/Users/jacobmiller/Documents/Projects/ClientPortalApp",
-        "editor-cmd": "code",
-        "scripts": {
-          "cmds": ["cd ./server && npm run dev"],
-          "bash-scripts": []
-        }
-      },
-      "linux": {}
-    }
-  },
-  {
     "title": "lmp",
     "summary": "TBD",
     "os": {
@@ -92,7 +72,7 @@
   },
   {
     "title": "LiveSite",
-    "summary": "n/a",
+    "summary": "a beatiful summary that I like",
     "os": {
       "windows": {
         "path": "C:\\Users\\jacob\\Documents\\VTHacks\\Live-Site",
@@ -101,15 +81,9 @@
           "cmds": ["npm start", "start http://localhost:8000"],
           "bash-scripts": []
         }
-      }
-    }
-  },
-  {
-    "title": "LiveSite",
-    "summary": "My summary",
-    "os": {
-      "windows": {
-        "path": "C:\\Users\\jacob\\Documents\\VTHacks\\Live-Site",
+      },
+      "macOS": {
+        "path": "~/Projects/Python/StartMyProject",
         "editor-cmd": "code .",
         "scripts": {
           "cmds": ["npm start", "start http://localhost:8000"],
