--- a/src/projects.json
+++ b/src/projects.json
@@ -1,95 +1,1 @@
-[
-  {
-    "title": "LL Frontend",
-    "summary": "TBD",
-    "os": {
-      "windows": {
-        "path": "C:\\Users\\jacob\\Documents\\Projects\\lovely-letter-client",
-        "editor-cmd": "code",
-        "scripts": { "cmds": ["npm start"], "bash-scripts": [] }
-      },
-      "linux": {
-        "path": "/mnt/c/Users/jacob/Documents/Projects/lovely-letter-client",
-        "editor-cmd": "code",
-        "scripts": { "cmds": ["npm start"], "bash-scripts": [] }
-      }
-    }
-  },
-  {
-    "title": "LL Server",
-    "summary": "TBD",
-    "os": {
-      "windows": {
-        "path": "C:\\Users\\jacob\\Documents\\Projects\\lovely-letters-server",
-        "editor-cmd": "code",
-        "scripts": { "cmds": ["npm start"], "bash-scripts": [] }
-      },
-      "macOS": {
-        "path": "",
-        "editor-cmd": "",
-        "scripts": { "cmds": [], "bash-scripts": [] }
-      }
-    }
-  },
-  {
-    "title": "portfolio",
-    "summary": "Jacob's Portfolio Website.",
-    "os": {
-      "windows": {
-        "path": "C:\\Users\\jacob\\Documents\\Projects\\portfolio-website",
-        "editor-cmd": "code",
-        "scripts": {
-          "cmds": ["npm run dev", "start http://localhost:3000"],
-          "bash-scripts": []
-        }
-      }
-    }
-  },
-  {
-    "title": "command-center",
-    "summary": "",
-    "os": {
-      "windows": {
-        "path": "C:\\Users\\jacob\\Documents\\Projects\\command-center",
-        "editor-cmd": "code",
-        "scripts": {
-          "cmds": ["cd ./client && npm run dev", "cd ./server && npm start"],
-          "bash-scripts": []
-        }
-      }
-    }
-  },
-  {
-    "title": "LiveSite",
-    "summary": "a beatiful summary that I like",
-    "os": {
-      "windows": {
-        "path": "C:\\Users\\jacob\\Documents\\VTHacks\\Live-Site",
-        "editor-cmd": "code",
-        "scripts": {
-          "cmds": ["npm start", "start http://localhost:8000"],
-          "bash-scripts": []
-        }
-      },
-      "macOS": {
-        "path": "~/Projects/Python/StartMyProject",
-        "editor-cmd": "code",
-        "scripts": {
-          "cmds": ["npm start", "start http://localhost:8000"],
-          "bash-scripts": []
-        }
-      }
-    }
-  },
-  {
-    "title": "lmp",
-    "summary": "LaunchMyProject",
-    "os": {
-      "macOS": {
-        "path": "~/Projects/Python/StartMyProject",
-        "editor-cmd": "code",
-        "scripts": { "cmds": [], "bash-scripts": [] }
-      }
-    }
-  }
-]
+[{"title": "lmp", "summary": "LaunchMyProject", "os": {"macOS": {"path": "~/Projects/Python/StartMyProject", "editor-cmd": "code", "scripts": {"cmds": [], "bash-scripts": []}}}}]
