--- a/src/projects.json
+++ b/src/projects.json
@@ -1,1 +1,1 @@
-[{"title": "lmp", "summary": "LaunchMyProject", "os": {"macOS": {"path": "~/Projects/Python/StartMyProject", "editor-cmd": "code", "scripts": {"cmds": [], "bash-scripts": []}}}}]
+[{"title": "lmp", "summary": "LaunchMyProject", "os": {"macOS": {"path": "~/Projects/Python/StartMyProject", "editor-cmd": "code", "scripts": {"cmds": [], "bash-scripts": []}}}}, {"title": "test", "summary": "fsd", "os": {"macOS": {"path": "~/test", "editor-cmd": "code", "scripts": {"cmds": [], "bash-scripts": []}}}}]
